fixed padding on small icons

--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ body {
         body .grit .project .grit-image img {
           height: 300px; }
       body .grit .project .description {
-        max-width: 50%;
+        max-width: 50vw;
         margin-right: 40px; }
         body .grit .project .description p {
           margin: 0 auto 0 auto;
@@ -119,7 +119,8 @@ body {
           justify-content: center;
           width: 100%;
           list-style: none;
-          color: white; }
+          color: white;
+          padding-inline-start: 0; }
           body .grit .project .grit-tech ul li {
             display: inline;
             margin: 100px 15px;
