--- a/scss/main.scss
+++ b/scss/main.scss
@@ -114,7 +114,7 @@ body {
         }
       }
       .description {
-        max-width: 50%;
+        max-width: 50vw;
         margin-right: 40px;
         p {
           margin: 0 auto 0 auto;
@@ -149,6 +149,7 @@ body {
           width: 100%;
           list-style: none;
           color: white;
+          padding-inline-start: 0;
           li {
             display: inline;
             margin: 100px 15px;;
